--- a/web/views/consolas/body.pug
+++ b/web/views/consolas/body.pug
@@ -23,19 +23,114 @@
           p.card-text Los mejores precios para que puedas adentrarte a mundos enormes e increibles.
           a.btn.btn-primary(href='/sign') Unete 
 
-  
-    h1 
+  .row.p-5
+    h1 Checa nuestros productos de Play Station
     h1
+    .col-md-3
+      .card(style='width: 16rem; height: 24rem;')
+        h1
+        img.card-img-top(src='/img/gow.jpg' alt='...' style='width: 10rem; height: 12rem;')
+        .card-body
+          h5.card-title God of War 
+          p.card-text $00
+          a.btn.btn-primary(href='/sign') Añadir al carrito
+
+    .col-md-3
+      .card(style='width: 16rem; height: 24rem;')
+        h1 
+        img.card-img-top(src='/img/tlu.jpg' alt='...' style='width: 10rem; height: 12rem;') 
+        .card-body
+          h5.card-title The last of Us
+          p.card-text $00
+          a.btn.btn-primary(href='/sign') Añadir al carrito
+    .col-md-3
+      .card(style='width: 16rem; height: 24rem;')
+        h1 
+        img.card-img-top(src='/img/iss.jpg' alt='...' style='width: 10rem; height: 12rem;')
+        .card-body
+          h5.card-title Infamous Second Son
+          p.card-text $00
+          a.btn.btn-primary(href='/sign') Añadir al carrito 
+    .col-md-3
+      .card(style='width: 16rem; height: 24rem;')
+        h1
+        img.card-img-top(src='/img/consolap.jpg' alt='...' style='width: 12rem; height: 12rem;')
+        .card-body
+          h5.card-title Play Station 5
+          p.card-text
+            | $00
+          a.btn.btn-primary(href='/sign') Añadir al carrito 
+  .row.p-5
+    h1 Checa nuestros productos de Xbox 
     h1
-    .row(style='gap: 2rem; padding: 20px;')
-        h1 Checa nuestros productos
-        h1    
-          each pro in prod
-            .col
-                .card(style='width: 14rem; height: 24rem;')
-                    h1
-                    img.card-img-top(src='/img/ds.jpg' alt='...' style='width: 10rem; height: 12rem;')
-                    .card-body
-                        h5.card-title=`${pro.nombre}`
-                        p.card-text=`${pro.precio.toFixed(2)}`
-                        a.btn.btn-secondary(href='/logIn') Inicia sesión para comprar
+    .col-md-3
+      .card(style='width: 16rem; height: 24rem;')
+        h1 
+        img.card-img-top(src='/img/ds1.jpg' alt='...' style='width: 10rem; height: 12rem;')
+        .card-body
+          h5.card-title Dark Souls
+          p.card-text
+            | $00
+          a.btn.btn-primary(href='/sign') Añadir al carrito
+    .col-md-3
+      .card(style='width: 16rem; height: 24rem;')
+        h1 
+        img.card-img-top(src='/img/gears.jpg' alt='...' style='width: 10rem; height: 12rem;')
+        .card-body
+          h5.card-title Gears of War
+          p.card-text $00
+          a.btn.btn-primary(href='/sign') Añadir al carrito
+    .col-md-3
+      .card(style='width: 16rem; height: 24rem;')
+        h1
+        img.card-img-top(src='/img/halo.jpg' alt='...' style='width: 10rem; height: 12rem;')
+        .card-body
+          h5.card-title Halo Infinite
+          p.card-text $00
+          a.btn.btn-primary(href='/sign') Añadir al carrito
+    .col-md-3
+      .card(style='width: 16rem; height: 24rem;')
+        h1
+        img.card-img-top(src='/img/consolax.jpg' alt='...' style='width: 12rem; height: 12rem;')
+        .card-body
+          h5.card-title Xbox Series X 
+          p.card-text
+            | $00
+          a.btn.btn-primary(href='/sign') Añadir al carrito
+  .row.p-5
+    h1 Checa nuestros productos de Nintendo
+    h1
+    .col-md-3
+      .card(style='width: 16rem; height: 24rem;')
+        h1 
+        img.card-img-top(src='/img/mario.jpg' alt='...' style='width: 9rem; height: 12rem;')
+        .card-body
+          h5.card-title Super Mario Odyssey
+          p.card-text
+            | $00
+          a.btn.btn-primary(href='/sign') Añadir al carrito
+    .col-md-3
+      .card(style='width: 16rem; height: 24rem;')
+        h1 
+        img.card-img-top(src='/img/zelda.jpg' alt='...' style='width: 9rem; height: 12rem;')
+        .card-body
+          h5.card-title Leyend of Zelda: BOTW
+          p.card-text $00
+          a.btn.btn-primary(href='/sign') Añadir al carrito
+    .col-md-3
+      .card(style='width: 16rem; height: 24rem;')
+        h1 
+        img.card-img-top(src='/img/animal.jpg' alt='...' style='width: 9rem; height: 12rem;') 
+        .card-body
+          h5.card-title Animal crossing
+          p.card-text $00
+          a.btn.btn-primary(href='/sign') Añadir al carrito
+    .col-md-3
+      .card(style='width: 16rem; height: 24rem;')
+        h1
+        img.card-img-top(src='/img/consolan.jpg' alt='...' style='width: 12rem; height: 12rem;')
+        .card-body
+          h5.card-title Nintendo Switch 
+          p.card-text
+            | $00
+          a.btn.btn-primary(href='/sign') Añadir al carrito
