--- a/web/views/user/uPlay.pug
+++ b/web/views/user/uPlay.pug
@@ -3,18 +3,14 @@ html(lang="es")
     head
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title NINTENDO
+        title PLAY STATION 
         link(rel="stylesheet", href="/css/bootstrap.css")
         link(rel="stylesheet", href="/css/style.css")
         script(src="/js/bootstrap.bundle.js")
         script(src="/js/pooper.min.js")
         script(src="codigo.js")
     body(class='p')
-      //- Renderiza un header diferente basado en la variable `userLoggedIn`
-      if userLoggedIn
         include ../layout/headerUsuario.pug
-      else
-        include ../layout/header.pug
 
 .container
   .row(style='gap: 2rem; padding: 20px;')
@@ -26,7 +22,4 @@ html(lang="es")
           .card-body
             h5.card-title=`${pro.nombre}`
             p.card-text=`${pro.precio.toFixed(2)}`
-            if userLoggedIn
-              button.btn.btn-primary.agregar-carrito(data-id=`${pro.id}` data-nombre=`${pro.nombre}` data-precio=`${pro.precio}` data-img='/img/ds.jpg') Añadir al carrito
-            else
-              a.btn.btn-secondary(href='/logIn') Inicia sesión para comprar
+            a.btn.btn-primary.input.agregar-carrito(href=`/user/agregarCarrito/${pro.id}`) Añadir al carrito
