--- a/web/views/admin/inicioAdministrador.pug
+++ b/web/views/admin/inicioAdministrador.pug
@@ -18,20 +18,26 @@ html(lang="es")
                     a.btn.btn-outline-success.me-2(href="/logOut") Salir
         .container
             .row.justify-content-center.align-items-center.p-5
-                .col-md-6.d-flex.justify-content-center
+                .col-md-4.d-flex.justify-content-center
                     .card(style='width: 18rem; height: 21rem;')
                         img.card-img-top(src='/img/lista.jpg' alt='...' style='width: 12rem; height: 12rem;')
                         .card-body
                             h5.card-title Lista de productos
                             a.btn.btn-primary(href='/admin/productos') Ingresar
 
-                .col-md-6.d-flex.justify-content-center
+                .col-md-4.d-flex.justify-content-center
                     .card(style='width: 18rem; height: 21rem;')
-                        h1 
-                        h1
                         img.card-img-top(src='/img/usu.jpg' alt='...' style='width: 10rem; height: 10rem;')
                         .card-body
                             h5.card-title Lista de usuarios
                             a.btn.btn-primary(href='/admin/usuarios') Ingresar
 
-        
+                .col-md-4.d-flex.justify-content-center
+                    .card(style='width: 18rem; height: 21rem;')
+                        img.card-img-top(src='/img/ventas.jpg' alt='...' style='width: 10rem; height: 10rem;')
+                        .card-body
+                            h5.card-title Lista de ventas
+                            a.btn.btn-primary(href='/admin/ventas') Ingresar
+
+
+                
