--- a/web/views/ventas/ventas.pug
+++ b/web/views/ventas/ventas.pug
@@ -20,10 +20,10 @@ if errores
         input(type="hidden" name="_csrf" value=csrf)
         label.form-label.m-3(for='metodo') Ingresa método de pago
         select#metodo.form-control(name="metodo")
-          each opcion in opcionesPago
-            option(value=opcion.id_datopago) #{opcion.beneficiario}
+            option(value="tarjeta") Tarjeta
+            option(value="..") ..
         label.form-label.m-3(for='usuario') ¿No tienes una tarjeta registrada? 
-        a.btn.btn-primary(href='/user/registrarTarjeta') Añade tarjeta
+        a.btn.btn-primary(href='/metodo') Añade tarjeta
         label.form-label.m-3(for='text') Resumen de la compra
         input#numero.form-control(type='text'  name="numero")
         br
