--- a/web/views/layout/headerUsuario.pug
+++ b/web/views/layout/headerUsuario.pug
@@ -25,9 +25,22 @@ header.navbar.bg-body-tertiary
                   th Cantidad
                   th
               tbody
-            a#vaciar-carrito.btn.btn-primary(href='#') Vaciar Carrito
-            br
-            a#Comprar.btn.btn-primary(href='/user/finalizarCompra') Comprar
+                each producto in carrito
+                  tr
+                    td
+                      img(src=producto.img alt=`Imagen de ${producto.nombre}` width="50")
+                    td= producto.nombre
+                    td= `$${producto.precio.toFixed(2)}`
+                    td= producto.cantidad
+                    td
+                      form(method="POST" action="/user/eliminarDelCarrito")
+                        input(type="hidden" name="_csrf" value=csrf)
+                        input(type="hidden" name="id" value=producto.id)
+                        button.btn.btn-danger(type="submit") X
+              a#vaciar-carrito.btn.btn-primary(href='/user/vaciarCarrito') Vaciar Carrito
+              br
+              a#Comprar.btn.btn-primary(href='/user/finalizarCompra') Comprar
+
 
     .two.columns   
       input.form-control(type='search' placeholder='Buscar' aria-label='Search')
