--- a/web/views/user/inicioUser.pug
+++ b/web/views/user/inicioUser.pug
@@ -42,7 +42,13 @@ html(lang="es")
                     .card-body
                         h5.card-title=`${pro.nombre}`
                         p.card-text=`${pro.precio.toFixed(2)}`
-                        button.btn.btn-primary.agregar-carrito(data-id=`${pro.id}` data-nombre=`${pro.nombre}` data-precio=`${pro.precio}` data-img='/img/ds.jpg') Añadir al carrito
+                        form(method="POST" action="/user/agregarCarrito")
+                          input(type="hidden" name="_csrf" value=csrf)
+                          input(type="hidden" name="id" value=`${pro.id}`)
+                          input(type="hidden" name="nombre" value=`${pro.nombre}`)
+                          input(type="hidden" name="precio" value=`${pro.precio}`)
+                          input(type="hidden" name="img" value="/img/ds.jpg")
+                          button.btn.btn-primary(type="submit") Añadir al carrito
 
   
 
