--- a/web/views/consolas/bPlay.pug
+++ b/web/views/consolas/bPlay.pug
@@ -27,11 +27,12 @@ html(lang="es")
             h5.card-title=`${pro.nombre}`
             p.card-text=`${pro.precio.toFixed(2)}`
             if userLoggedIn
-               form(method="POST" action="/user/agregarCarrito")
-                input(type="hidden" name="id" value=`${pro.id_producto}`)
+              form(method="POST" action="/user/agregarCarrito")
+                input(type="hidden" name="_csrf" value=csrf)
+                input(type="hidden" name="id" value=`${pro.id}`)
                 input(type="hidden" name="nombre" value=`${pro.nombre}`)
                 input(type="hidden" name="precio" value=`${pro.precio}`)
-                input(type="hidden" name="img" value=`/img/caratulas/${pro.id_producto}.jpg`)
+                input(type="hidden" name="img" value=`/img/caratulas/${pro.id}.jpg`)
                 button.btn.btn-primary(type="submit") Añadir al carrito
             else
               a.btn.btn-secondary(href='/logIn') Inicia sesión para comprar
