--- a/web/views/consolas/bNin.pug
+++ b/web/views/consolas/bNin.pug
@@ -22,7 +22,7 @@ html(lang="es")
       .col-md-2
         .card(style='width: 14rem; height: 24rem;')
           h1 
-          img.card-img-top(src='/img/ds.jpg' alt='...' style='width: 10rem; height: 12rem;')
+          img.card-img-top(src=`/img/caratulas/${pro.id_producto}.jpg` alt='...' style='width: 10rem; height: 12rem;')
           .card-body
             h5.card-title=`${pro.nombre}`
             p.card-text=`${pro.precio.toFixed(2)}`
