--- a/web/views/admin/inicioAdministrador.pug
+++ b/web/views/admin/inicioAdministrador.pug
@@ -33,5 +33,13 @@ html(lang="es")
                         .card-body
                             h5.card-title Lista de usuarios
                             a.btn.btn-primary(href='/admin/usuarios') Ingresar
+                .col-md-6.d-flex.justify-content-center
+                    .card(style='width: 18rem; height: 21rem;')
+                        h1 
+                        h1
+                        img.card-img-top(src='/img/ventas.jpg' alt='...' style='width: 10rem; height: 10rem;')
+                        .card-body
+                            h5.card-title Ventas
+                            a.btn.btn-primary(href='/admin/ventas') Ingresar
 
         
