--- a/web/views/pago/pago.pug
+++ b/web/views/pago/pago.pug
@@ -34,7 +34,7 @@ if errores
               th Nombre
               th Precio
               th Cantidad
-              th Total
+              th Subtotal
           tbody
             each producto in carrito
               tr
